Removed unnecessary sections

--- a/22/partners.html
+++ b/22/partners.html
@@ -12,14 +12,14 @@
 
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,700' rel='stylesheet' type='text/css'>
-    
+
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" media="all" />
     <link rel="stylesheet" href="assets/css/animate.css" type="text/css" media="all" />
     <link rel="stylesheet" href="assets/css/font-awesome.min.css" type="text/css" media="all" />
     <link rel="stylesheet" href="assets/css/font-lineicons.css" type="text/css" media="all" />
     <link rel="stylesheet" href="assets/css/jquery.fancybox.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" media="all" /> 
-    
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" media="all" />
+
     <!--[if lt IE 9]>
         <script src="assets/js/html5.js"></script>
         <script src="assets/js/respond.min.js"></script>
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <ul class="navigation-bar navigation-bar-left">          
+          <ul class="navigation-bar navigation-bar-left">
             <li><a href="index.html"><img src="assets/img/sinfoOn.png"></a>
             <li><a href="index.html#about">About</a></li>
             <!--<li><a href="#stat">Number Facts</a></li>-->
@@ -51,10 +51,10 @@
             <li class="featured"><a href="stream.html"><i class="fa fa-video-camera fa-1x"></i>Live Stream</a></li>
           </ul>
         </nav>
-      </div>      
+      </div>
     </header>
     <!-- Register Section -->
-    <section id="register" class="section light">
+    <!--<section id="register" class="section light">
       <div class="overlay"></div>
       <div class="container">
         <article class="article-big animated hiding" data-animation="fadeInUp" data-delay="0">
@@ -66,6 +66,7 @@
         </article>
       </div>
     </section>
+    -->
     <!-- End Register Section -->
     <!-- Sponsors Section -->
     <section id="partners" class="section dark">
@@ -76,7 +77,7 @@
         <div class="row">
           <ul class="list-inline">
             <li style="width:40%"><a href="https://github.com/" target="_blank"><img src="assets/img/sponsor/GitHub_Logo.png" alt="sponsor-1" /></a></li>
-          </ul> 
+          </ul>
             </div>
         <div class="sub-title">Platinum Partners</div>
         <div class="row">
@@ -86,8 +87,8 @@
             <li style="width:31%"><a href="http://www.boldint.com/" target="_blank"><img src="assets/img/sponsor/Bold.png" alt="sponsor-1" /></a></li>
             <li style="width:31%"><a href="http://www2.deloitte.com/pt/pt.html" target="_blank"><img src="assets/img/sponsor/Deloite.png" alt="sponsor-1" /></a></li>
             <li style="width:31%"><a href="http://www.ericsson.com/pt" target="_blank"><img src="assets/img/sponsor/Ericsson.png" alt="sponsor-1" /></a></li>
-          </ul> 
-        </div> 
+          </ul>
+        </div>
         <div class="sub-title">Gold Partners</div>
         <div class="row">
           <ul class="list-inline">
@@ -117,7 +118,7 @@
             <li><a href="http://www.outsystems.com/" target="_blank"><img src="assets/img/sponsor/OutSystems.png" alt="sponsor-1" /></a></li>
             <li><a href="http://www.edisoft.pt//" target="_blank"><img src="assets/img/sponsor/Edisoft.png" alt="sponsor-1" /></a></li>
             <li><a href="http://www.syone.com/index.php/pt/" target="_blank"><img src="assets/img/sponsor/Syone.png" alt="sponsor-1" /></a></li>
-            <li><a href="http://www.itsector.pt/pt.aspx" target="_blank"><img src="assets/img/sponsor/ITsector.png" alt="sponsor-1" /></a></li>           
+            <li><a href="http://www.itsector.pt/pt.aspx" target="_blank"><img src="assets/img/sponsor/ITsector.png" alt="sponsor-1" /></a></li>
           </ul>
         </div>
         <div class="sub-title">Partners</div>
@@ -144,16 +145,16 @@
       </div>
     </section>
     <footer id="footer" style="text-align: center;" >
-      © 2015 &nbsp;&nbsp; All rights reserved.        
+      © 2015 &nbsp;&nbsp; All rights reserved.
     </footer>
     <!-- End Price Section -->
 <!--[if lt IE 9]>
         <script type="text/javascript" src="assets/js/jquery-1.11.0.min.js?ver=1"></script>
-    <![endif]-->  
-    <!--[if (gte IE 9) | (!IE)]><!-->  
+    <![endif]-->
+    <!--[if (gte IE 9) | (!IE)]><!-->
        <script type="text/javascript" src="assets/js/jquery-2.1.0.min.js?ver=1"></script>
-    <!--<![endif]-->  
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script> 
+    <!--<![endif]-->
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.nav.js"></script>
     <script type="text/javascript" src="assets/js/jquery.appear.js"></script>
