--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <span class="note">February 1st, 2015</span>
           <h3>New speaker announced!</h3>
           <p>
-            Alberto López. Alberto works as Developer Evangelist at Paypal and Braintree, he will be present at our Startup Rush event, day 28.
+            Alberto López. Alberto works as Developer Evangelist at Braintree_Dev. A Paypal Company, he will be present at our Startup Rush event, day 28.
           </p>
         </div>
         <div class="all-40 medium-50 small-100 tiny-100 justify-text">
@@ -277,7 +277,7 @@
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Alberto López</h6>
           <!--<a href="22/speaker/PeterSunde.html">--><img src="img/speakers/AlbertoL.png" onmouseover="this.src='img/speakers/back/AlbertoL.png'" onmouseout="this.src='img/speakers/AlbertoL.png'" alt=""><!--</a>-->
-          <p class="note"> PayPal Developer & Braintree</p>
+          <p class="note">Developer Evangelist at Braintree_Dev. A Paypal Company</p>
         </div>
       </div>
     </div>
