--- a/22/schedule.html
+++ b/22/schedule.html
@@ -923,7 +923,7 @@
                             <article>
                               <p><b>Duration: </b>1h30</p>
                               <p>details soon...</p>
-                              <p class="author"><a href="speaker/MihnLe.html"><strong><i class="fa fa-user"></i> Mihn "Gooseman" Le - Software Engineering Manager at PayPal and card.io Co-Founder</strong></a></p>
+                              <p class="author"><a href="speaker/MihnLe.html"><strong><i class="fa fa-user"></i> Mihn "Gooseman" Le - Creator of Counter-Strike</strong></a></p>
                             </article>
                           </div>
                         </div>
@@ -1226,7 +1226,7 @@
                             <article>
                               <p><b>Duration: </b>1h30</p>
                               <p>details soon...</p>
-                              <p class="author"><a href="speaker/MihnLe.html"><strong><i class="fa fa-user"></i> Mihn "Gooseman" Le - Software Engineering Manager at PayPal and card.io Co-Founder</strong></a></p>
+                              <p class="author"><a href="speaker/MihnLe.html"><strong><i class="fa fa-user"></i> Mihn "Gooseman" Le - Creator of Counter-Strike</strong></a></p>
                             </article>
                           </div>
                         </div>
