Update Deloitte, Hitachi e CBTIT

--- a/22/partners.html
+++ b/22/partners.html
@@ -85,7 +85,7 @@
             <li style="width:31%"><a href="http://www.gatewit.com/pt/" target="_blank"><img src="assets/img/sponsor/gatewit.png" alt="sponsor-1" /></a></li>
             <li style="width:31%"><a href="http://www.kpmg.com/PT/PT/Paginas/default.aspx" target="_blank"><img src="assets/img/sponsor/KPMG.png" alt="sponsor-1" /></a></li>
             <li style="width:31%"><a href="http://www.boldint.com/" target="_blank"><img src="assets/img/sponsor/Bold.png" alt="sponsor-1" /></a></li>
-            <li style="width:31%"><a href="http://www2.deloitte.com/pt/pt.html" target="_blank"><img src="assets/img/sponsor/Deloite.png" alt="sponsor-1" /></a></li>
+            <li style="width:31%"><a href="http://www2.deloitte.com/pt/pt.html" target="_blank"><img src="assets/img/sponsor/Deloitte.png" alt="sponsor-1" /></a></li>
             <li style="width:31%"><a href="http://www.ericsson.com/pt" target="_blank"><img src="assets/img/sponsor/Ericsson.png" alt="sponsor-1" /></a></li>
           </ul>
         </div>
@@ -104,6 +104,7 @@
             <li style="width:23%"><a href="www.everis.com/portugal/pt-PT/home" target="_blank"><img src="assets/img/sponsor/Everis.png" alt="sponsor-1" /></a></li>
             <li style="width:23%"><a href="www.hitachi.pt/" target="_blank"><img src="assets/img/sponsor/Hitachi.png" alt="sponsor-1" /></a></li>
             <li style="width:23%"><a href="www.unisys.pt/" target="_blank"><img src="assets/img/sponsor/Unisys.png" alt="sponsor-1" /></a></li>
+            <li style="width:23%"><a href="http://www.crossbordertalents.com/en" target="_blank"><img src="assets/img/sponsor/CBTIT.png" alt="sponsor-1" /></a></li>
           </ul>
         </div>
         <div class="sub-title">Silver Partners</div>
