--- a/22/schedule.html
+++ b/22/schedule.html
@@ -121,13 +121,13 @@
                       </div>
                       <div class="panel panel-default">
                         <div class="speaker-wrapper" style="width:120px; left: 30px;">
-                          <img src="assets/img/sponsor/Hitachi.png" style="margin-top: 12px;" class="img-responsive" alt="speaker-2" />
+                          <img src="assets/img/sponsor/CBTIT.png" style="margin-top: 12px;" class="img-responsive" alt="speaker-2" />
                         </div>
                         <div class="panel-heading">
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 10h00 <div style="float: right"><i class="fa fa-map-marker"></i>Room 02.2 of Congress Center</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item2" class="collapsed">
-                               Hitachi Consulting
+                               Cross Border Talents ICT
                               <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                               <div style="color: black; font-size: 15px; font-weight: 500; padding-right: 2px; float: right; padding-top: 10px;">Company Presentation</div>
@@ -158,6 +158,29 @@
                           </div>
                         </div>
                         <div id="item3" class="panel-collapse collapse">
+                          <div class="panel-body">
+                            <article>
+                              <p>details soon...</p>
+                            </article>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="panel panel-default">
+                        <div class="speaker-wrapper" style="width:120px; left: 30px;">
+                          <img src="assets/img/sponsor/Hitachi.png" style="margin-top: 12px;" class="img-responsive" alt="speaker-2" />
+                        </div>
+                        <div class="panel-heading">
+                          <div class="panel-title">
+                            <div class="time"><i class="fa fa-clock-o"></i> 11h00 <div style="float: right"><i class="fa fa-map-marker"></i>Room 02.2 of Congress Center</div></div>
+                            <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item4" class="collapsed">
+                               Hitachi Consulting
+                              <div class="pull-right fa fa-angle-up"></div>
+                              <div class="pull-right fa fa-angle-down"></div>
+                              <div style="color: black; font-size: 15px; font-weight: 500; padding-right: 2px; float: right; padding-top: 10px;">Company Presentation</div>
+                            </a>
+                          </div>
+                        </div>
+                        <div id="item4" class="panel-collapse collapse">
                           <div class="panel-body">
                             <article>
                               <p>details soon...</p>
@@ -490,13 +513,13 @@
                       <p align="middle"> <span style="font-size: 20px;">Room 02.2 of Congress Center </span> </p>
                       <div class="panel panel-default">
                         <div class="speaker-wrapper" style="width:120px; left: 30px;">
-                          <img src="assets/img/sponsor/Hitachi.png" style="margin-top: 12px;" class="img-responsive" alt="speaker-2" />
+                          <img src="assets/img/sponsor/CBTIT.png" style="margin-top: 12px;" class="img-responsive" alt="speaker-2" />
                         </div>
                         <div class="panel-heading">
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 10h00</div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemTwentyFour" class="collapsed">
-                               Hitachi Consulting
+                               Cross Border Talents ICT
                               <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                             </a>
@@ -510,7 +533,7 @@
                           </div>
                         </div>
                       </div>
-                      <!-- <div class="panel panel-default">
+                      <div class="panel panel-default">
                         <div class="speaker-wrapper" style="width:120px; left: 30px;">
                           <img src="assets/img/sponsor/Hitachi.png" class="img-responsive" alt="speaker-2" />
                         </div>
@@ -531,7 +554,7 @@
                             </article>
                           </div>
                         </div>
-                      </div> -->
+                      </div>
                       <div class="panel panel-default">
                         <div class="speaker-wrapper" style="width:120px; left: 30px;">
                           <img src="assets/img/sponsor/Everis.png" class="img-responsive" alt="speaker-2" />
@@ -617,7 +640,7 @@
                           <li style="width:160px"><a href="http://www.gatewit.com/pt/" target="_blank"><img src="assets/img/sponsor/gatewit.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.accenture.com/pt-en/Pages/index.aspx" target="_blank"><img src="assets/img/sponsor/accenture.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.kpmg.com/PT/PT/Paginas/default.aspx" target="_blank"><img src="assets/img/sponsor/KPMG.png" width="160px" alt="sponsor-1" /></a></li>
-                          <li style="width:160px"><a href="http://www2.deloitte.com/pt/pt.html" target="_blank"><img src="assets/img/sponsor/Deloite.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px"><a href="http://www2.deloitte.com/pt/pt.html" target="_blank"><img src="assets/img/sponsor/Deloitte.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.itpeople.pt/" target="_blank"><img src="assets/img/sponsor/itpeople.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.pwc.pt/" target="_blank"><img src="assets/img/sponsor/PwC.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.capgemini.com/" target="_blank"><img src="assets/img/sponsor/Capgemini.png" width="160px" alt="sponsor-1" /></a></li>
@@ -747,7 +770,7 @@
                       </div>
                       <div class="panel panel-default">
                         <div class="speaker-wrapper" style="width:120px; left: 30px;">
-                          <img src="assets/img/sponsor/Deloite.png" class="img-responsive" style="margin-top: -15px;" alt="speaker-2" />
+                          <img src="assets/img/sponsor/Deloitte.png" class="img-responsive" style="margin-top: -15px;" alt="speaker-2" />
                         </div>
                         <div class="panel-heading">
                           <div class="panel-title">
