--- a/22/index.html
+++ b/22/index.html
@@ -297,7 +297,7 @@
                   <img src="assets/img/speaker/AlbertoL.png" class="img-responsive img-circle" alt="Alberto López" />
                 </div>
                 <div class="name">Alberto López</div>
-                <div class="sub">Paypal & Braintree</div>
+                <div class="sub">Braintree_Dev</div>
              <!-- </a>-->
             </div>
           </div>
