--- a/22/schedule.html
+++ b/22/schedule.html
@@ -640,10 +640,12 @@
                           <li style="width:160px"><a href="http://www.gatewit.com/pt/" target="_blank"><img src="assets/img/sponsor/gatewit.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.accenture.com/pt-en/Pages/index.aspx" target="_blank"><img src="assets/img/sponsor/accenture.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.kpmg.com/PT/PT/Paginas/default.aspx" target="_blank"><img src="assets/img/sponsor/KPMG.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px"><a href="http://startuplisboa.com/" target="_blank"><img src="assets/img/sponsor/startupLx.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www2.deloitte.com/pt/pt.html" target="_blank"><img src="assets/img/sponsor/Deloitte.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.itpeople.pt/" target="_blank"><img src="assets/img/sponsor/itpeople.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.pwc.pt/" target="_blank"><img src="assets/img/sponsor/PwC.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.capgemini.com/" target="_blank"><img src="assets/img/sponsor/Capgemini.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px"><a href="http://www.crossbordertalents.com/en" target="_blank"><img src="assets/img/sponsor/CBTIT.png" width="160px" alt="sponsor-1" /></a></li>
                         </ul> 
                       </div>
                       <hr style="max-width: 940px; width: 100%">
@@ -654,6 +656,7 @@
                           <li style="width:160px; margin-top: 20px"><a href="www.hitachi.pt/" target="_blank"><img src="assets/img/sponsor/Hitachi.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.glintt.com/" target="_blank"><img src="assets/img/sponsor/Glintt.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="https://www.randstad.pt/" target="_blank"><img src="assets/img/sponsor/randstad.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px; padding-top: 10px"><a href="http://www.ordemengenheiros.pt/pt/" target="_blank"><img src="assets/img/sponsor/OE.png" width="160px" alt="sponsor-1" /></a></li>
                         </ul> 
                       </div>
                   </div>
@@ -1289,10 +1292,12 @@
                           <li style="width:160px"><a href="http://www.gatewit.com/pt/" target="_blank"><img src="assets/img/sponsor/gatewit.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.accenture.com/pt-en/Pages/index.aspx" target="_blank"><img src="assets/img/sponsor/accenture.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.kpmg.com/PT/PT/Paginas/default.aspx" target="_blank"><img src="assets/img/sponsor/KPMG.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px"><a href="http://startuplisboa.com/" target="_blank"><img src="assets/img/sponsor/startupLx.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www2.deloitte.com/pt/pt.html" target="_blank"><img src="assets/img/sponsor/Deloite.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.itpeople.pt/" target="_blank"><img src="assets/img/sponsor/itpeople.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.pwc.pt/" target="_blank"><img src="assets/img/sponsor/PwC.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.capgemini.com/" target="_blank"><img src="assets/img/sponsor/Capgemini.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px"><a href="http://www.crossbordertalents.com/en" target="_blank"><img src="assets/img/sponsor/CBTIT.png" width="160px" alt="sponsor-1" /></a></li>
                         </ul> 
                       </div>
                       <hr style="max-width: 940px; width: 100%">
@@ -1304,6 +1309,7 @@
                           <li style="width:160px"><a href="http://www.glintt.com/" target="_blank"><img src="assets/img/sponsor/Glintt.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="https://www.randstad.pt/" target="_blank"><img src="assets/img/sponsor/randstad.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.boldint.com/" target="_blank"><img src="assets/img/sponsor/Bold.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px; padding-top: 10px"><a href="http://www.ordemengenheiros.pt/pt/" target="_blank"><img src="assets/img/sponsor/OE.png" width="160px" alt="sponsor-1" /></a></li>
                         </ul> 
                       </div>
                   </div>
@@ -1913,7 +1919,9 @@
                           <li style="width:160px"><a href="www.opensoft.pt/" target="_blank"><img src="assets/img/sponsor/opensoft.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px; padding-left: 15px;"><a href="http://www.gatewit.com/pt/" target="_blank"><img src="assets/img/sponsor/gatewit.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.ericsson.com/pt" target="_blank"><img src="assets/img/sponsor/Ericsson.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px"><a href="http://www.bnpparibas.pt/en/" target="_blank"><img src="assets/img/sponsor/bnpparibas.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.kpmg.com/PT/PT/Paginas/default.aspx" target="_blank"><img src="assets/img/sponsor/KPMG.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px"><a href="http://startuplisboa.com/" target="_blank"><img src="assets/img/sponsor/startupLx.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www2.deloitte.com/pt/pt.html" target="_blank"><img src="assets/img/sponsor/Deloite.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="www.blip.pt/" target="_blank"><img src="assets/img/sponsor/blip.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.sap.com/portugal/" target="_blank"><img src="assets/img/sponsor/SAP.png" width="160px" alt="sponsor-1" /></a></li>
@@ -1930,6 +1938,8 @@
                           <li style="width:160px"><a href="www.unisys.pt/" target="_blank"><img src="assets/img/sponsor/Unisys.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.link.pt/" target="_blank"><img src="assets/img/sponsor/link.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.boldint.com/" target="_blank"><img src="assets/img/sponsor/Bold.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px; padding-top: 10px"><a href="http://www.ordemengenheiros.pt/pt/" target="_blank"><img src="assets/img/sponsor/OE.png" width="160px" alt="sponsor-1" /></a></li>
+
                         </ul> 
                       </div>
                   </div>
@@ -2495,7 +2505,9 @@
                           <li style="width:160px"><a href="www.opensoft.pt/" target="_blank"><img src="assets/img/sponsor/opensoft.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px;"><a href="http://www.habber.com/" target="_blank"><img src="assets/img/sponsor/HabberTec.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.ericsson.com/pt" target="_blank"><img src="assets/img/sponsor/Ericsson.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px"><a href="http://www.bnpparibas.pt/en/" target="_blank"><img src="assets/img/sponsor/bnpparibas.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.icreateconsulting.com/" target="_blank"><img src="assets/img/sponsor/icreate.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px"><a href="http://startuplisboa.com/" target="_blank"><img src="assets/img/sponsor/startupLx.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www2.deloitte.com/pt/pt.html" target="_blank"><img src="assets/img/sponsor/Deloite.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="www.blip.pt/" target="_blank"><img src="assets/img/sponsor/blip.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.sap.com/portugal/" target="_blank"><img src="assets/img/sponsor/SAP.png" width="160px" alt="sponsor-1" /></a></li>
@@ -2511,6 +2523,7 @@
                           <li style="width:160px; margin-top: 20px"><a href="http://www.runtime-revolution.com/runtime" target="_blank"><img src="assets/img/sponsor/runtime.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="www.unisys.pt/" target="_blank"><img src="assets/img/sponsor/Unisys.png" width="160px" alt="sponsor-1" /></a></li>
                           <li style="width:160px"><a href="http://www.boldint.com/" target="_blank"><img src="assets/img/sponsor/Bold.png" width="160px" alt="sponsor-1" /></a></li>
+                          <li style="width:160px; padding-top: 10px"><a href="http://www.ordemengenheiros.pt/pt/" target="_blank"><img src="assets/img/sponsor/OE.png" width="160px" alt="sponsor-1" /></a></li>
                         </ul> 
                       </div>
                   </div>
